src/test/deca/context/invalid/intermediaire2/boolean/04print-boolean-2.deca
{
    boolean x = true;
    print(x);
}